--- a/src/LuanNiao.Blazor.Core/LuanNiao.Blazor.Core.csproj
+++ b/src/LuanNiao.Blazor.Core/LuanNiao.Blazor.Core.csproj
@@ -4,7 +4,7 @@
     <RazorLangVersion>3.0</RazorLangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0-preview.2.20167.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-preview.2.20167.3" />
   </ItemGroup> 
 </Project>
